--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
-<h1>Iceland</h1>
+<!DOCTYPE hyml>
+<html>
+  <head>
+    <meta charset="utf-a">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Greece</title>
+    </head>
+<body>
+  
+<h1>Greece</h1>
 
-<img src="https://www.gannett-cdn.com/presto/2018/12/22/USAT/5708e7ab-1e0d-47ad-875f-3e45962f3b2c-GettyImages-1069107084.jpg" class="center">
+<img src="https://cdn1.matadornetwork.com/blogs/1/2011/05/greece-1200x853.jpg" class="center">
 
-<p>Iceland (Icelandic: Ísland; [ˈistlant] ( listen)) is a Nordic island country in the North Atlantic, with a population of 364,134 and an area of 103,000 km2 (40,000 sq mi), making it the most sparsely populated country in Europe. The capital and largest city is Reykjavík.</p>
+<p>Greece is a country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas. Influential in ancient times, it's often called the cradle of Western civilization. Athens, its capital, retains landmarks including the 5th-century B.C. Acropolis citadel with the Parthenon temple. Greece is also known for its beaches, from the black sands of Santorini to the party resorts of Mykonos.</p>
 
-<hr class="dashed">
 
-<h2>What is the best time of year to go to Iceland?</h2>
 
-<p>The summer months — July and August — are Iceland's warmest, and have long been the most popular time to visit. And June, with its 24 hours of daylight, sees just about as many tourists as the peak of summer. But even during this season, bad weather (rain and intense winds) is not uncommon.</p>
+<h2>Why Should You Visit Greece?</h2>
+
+<p>Greece offers sunshine, whitewashed houses with bright-blue shutters, delicious food, and a relaxed lifestyle. And, as the cradle of Western civilization, it has some of the world's greatest ancient monuments. While it's a late bloomer in the modern age and retains echoes of a simpler, time-passed world, contemporary Greece has one of Europe's fastest-changing cultural landscapes. With its classical past, hang-loose present, and edgy future, Greece offers something for every traveler.</p>
+  
+
+<div class="footer">
+  <p> 
+    <a href="http://www.visitgreece.gr">Visit Greece</a>
+    </p>
+</div>
+  
+  
+</body>
+</html>
